--- a/pneumonia_webapp/requirements.txt
+++ b/pneumonia_webapp/requirements.txt
@@ -5,5 +5,5 @@ pillow==10.0.0
 opencv-python==4.8.0.76
 reportlab==4.0.4
 matplotlib==3.7.2
-gunicorn==21.2.0       # For deployment (e.g. Render, Heroku)
-python-dotenv==1.0.0   # For managing environment variables
+gunicorn==21.2.0       
+python-dotenv==1.0.0   variables
